--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,16 @@
         </dependencies>
       </plugin>
     </plugins>
-
   </build>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.18.1</version>
+      </plugin>
+    </plugins>
+  </reporting>
 
 </project>
