--- a/circle.yml
+++ b/circle.yml
@@ -12,4 +12,7 @@ test:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
     - mkdir -p $CIRCLE_TEST_REPORTS/site/
+    # debug
+    - find . -type d -regex ".*/target/site"
+    # end debug
     - cp -r target/site/* $CIRCLE_TEST_REPORTS/site/
