--- a/circle.yml
+++ b/circle.yml
@@ -8,6 +8,14 @@ machine:
       oraclejdk8
 
 test:
+  # Call 'mvn integration-test site' instead of the default 'mvn integration-test'
+  override:
+    - mvn integration-test site -s settings.xml
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
+
+general:
+  # preserve the generated HTML test reports
+  artifacts:
+    - "target/site"
