--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ machine:
 test:
   # Call 'mvn integration-test site' instead of the default 'mvn integration-test'
   override:
-    - mvn integration-test site
+    - mvn integration-test site -U
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
